syntax = "proto3";

package A20;

option java_multiple_files = true;

// signup operation

message SignUpRequest {
    string username = 1;
    string password = 2;
    string pubKey = 3;
}

message SignUpResponse {
    int32 ack = 1;
}

// login operation

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 ack = 1;
}

// logout operation

message LogoutRequest {
    // empty
}

message LogoutResponse {
    int32 ack = 1;
}

// service
service NotIST {
    rpc signup(SignUpRequest) returns (SignUpResponse);
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(LogoutRequest) returns (LogoutResponse);
}